src/objects/EventApi__Waitlist_Entry__c.object
<CustomObject>
    <description>Waitlist Entry store the Contact Information for people who want to be notified when any available ticket/registrations become open either for a Event or a Schedule Item at an Event.</description>
    <fields>
        <fullName>EventApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Contact. Derived from email fields matching a Contact record through query.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Contact. Derived from email fields matching a Contact record through query.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Waitlist_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Date_Added__c</fullName>
        <description>** System Calculated Required Override ** The date the Waitlist Entry was added. Defaults to the day the record was created in the database.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the Waitlist Entry was added. Defaults to the day the record was created in the database.</inlineHelpText>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Email__c</fullName>
        <description>** System Calculated Required Override ** Email address to send related notifications to the Waitlist Contact. Derives from the linked Contact&apos;s &quot;Preferred Email&quot; address.</description>
        <inlineHelpText>** System Calculated Required Override ** Email address to send related notifications to the Waitlist Contact. Derives from the linked Contact&apos;s &quot;Preferred Email&quot; address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to related Event. Required for &quot;Event&quot; Waitlist Entries.</description>
        <inlineHelpText>** Conditionally Required ** Link to related Event. Required for &quot;Event&quot; Waitlist Entries.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Waitlist</relationshipLabel>
        <relationshipName>Waitlist_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Full_Name__c</fullName>
        <description>Displayed on Event Registration UI to allow registrant to input their name.</description>
        <inlineHelpText>Displayed on Event Registration UI to allow registrant to input their name</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Waitlist Entries that have registered for the Event or Schedule Item successfully after notification will have this checkbox checked automatically.</description>
        <inlineHelpText>Waitlist Entries that have registered for the Event or Schedule Item successfully after notification will have this checkbox checked automatically.</inlineHelpText>
        <label>Is Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Message__c</fullName>
        <description>Optional message that can be populated by the Waitlist Contact on Waitlist opt-in pages.</description>
        <inlineHelpText>Optional message that can be populated by the Waitlist Contact on Waitlist opt-in pages.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Waitlist Entry has been notified of tickets becoming available.</description>
        <inlineHelpText>When checked, the Waitlist Entry has been notified of tickets becoming available.</inlineHelpText>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Notified_Date_Time__c</fullName>
        <description>** System Calculated ** The date and time the Waitlist Entry was notified of availability.</description>
        <inlineHelpText>** System Calculated ** The date and time the Waitlist Entry was notified of availability.</inlineHelpText>
        <label>Notified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventApi__Other_Phone__c</fullName>
        <description>Optional alternate phone for the Waitlist Contact.</description>
        <inlineHelpText>Optional alternate phone for the Waitlist Contact.</inlineHelpText>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Phone__c</fullName>
        <description>** System Calculated Required Override ** Primary Contact Phone. Derives from the linked Contact&apos;s &quot;Preferred Phone&quot;.</description>
        <inlineHelpText>** System Calculated Required Override ** Primary Contact Phone. Derives from the linked Contact&apos;s &quot;Preferred Phone&quot;.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Priority__c</fullName>
        <description>The priority of a Waitlist Entry determines who the system will notify first when tickets become available. Defaults &quot;Medium&quot;.</description>
        <inlineHelpText>The priority of a Waitlist Entry determines who the system will notify first when tickets become available. Defaults &quot;Medium&quot;.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Requested__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of tickets requested for purchase.</description>
        <inlineHelpText>The number of tickets requested for purchase.</inlineHelpText>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to related Schedule Item. Required for &quot;Schedule Item&quot; Waitlist Entries.</description>
        <inlineHelpText>** Conditionally Required ** Link to related Schedule Item. Required for &quot;Schedule Item&quot; Waitlist Entries.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Waitlist</relationshipLabel>
        <relationshipName>Waitlist_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Status__c</fullName>
        <description>The current status of the Waitlist Entry. Defaults to &quot;Waiting&quot;.</description>
        <inlineHelpText>The current status of the Waitlist Entry. Defaults to &quot;Waiting&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting</fullName>
                    <default>true</default>
                    <label>Waiting</label>
                </value>
                <value>
                    <fullName>Notified</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Notified - No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to related Ticket Type. Required for &quot;Ticket Type&quot; Waitlist Entries.</description>
        <inlineHelpText>** Conditionally Required ** Link to related Ticket Type. Required for &quot;Ticket Type&quot; Waitlist Entries.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Waitlist</relationshipLabel>
        <relationshipName>Waitlist_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTE__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked the to related Sales Order.</description>
        <inlineHelpText>Linked the to related Sales Order.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Waitlist Entry</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Waitlist Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlist Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>